--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="%BASE_URL%pwa-icon.svg" />
+    <link rel="apple-touch-icon" href="%BASE_URL%pwa-192x192.png" />
+    <link rel="manifest" href="%BASE_URL%manifest.webmanifest" />
+    <meta name="theme-color" content="#0e1a2b" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Analysis</title>
   </head>
